Add translation functionality for Keycloak in Japanese and Chinese
- Implemented a new script to handle translations for Keycloak content.
- Added support for translating missing keys from Japanese to Chinese.
- Introduced error handling and logging for translation processes.
- Enhanced the structure of translation files for better maintainability.